<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:fillViewport="true">

    <!-- OKAY. SO, JUST LEARNED THAT THIS IS HOW I DO AN XML COMMENT
     ...and, of course, I think in HTML, too and, indeed, any *ML
     -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:singleLine="true"
            tools:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/toppings_header"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkDeCheckBreadCrumbs">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/bread_crumbs_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bread_crumbs"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/whipped_cream_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/whipped_cream" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chocolate_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/chocolate" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quantity_coffee_cups"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="reduceCoffee"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/cups_to_order_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="0" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="addCoffee"
                android:text="@string/plus_sign" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/summary_hint_text"
            android:padding="1dp"
            android:text=""
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:onClick="showMessage"
            android:text="@string/order_coffee_text" />

    </LinearLayout>

</ScrollView>